fixed alignment of create new employee btn

--- a/public/style.css
+++ b/public/style.css
@@ -186,6 +186,10 @@ hr {
   color: black;
 }
 
+#create-employee-btn {
+  margin: 0 auto;
+}
+
 @media screen and (max-width: 700px) {
   #else-homepage {
     display: flex;
